--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,7 @@
 /ConsoleApp1/obj/Debug
 /StudentInfo/.vs/StudentInfo
 /ChallengeProject/.vs
+/ChallengeProject/Final/obj/Debug/net8.0
+/ChallengeProject/Final/obj/Release/net8.0
+/ChallengeProject/Starter/obj/Debug/net8.0/Starter.GlobalUsings.g.cs
+/ChallengeProject/Starter/Program.cs
